kubes/rappi-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rappi-demo-kafka-web-producer
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - rappi-demo.atelier.run
      secretName: rappi-demo-kafka-web-producer
  rules:
    - host: rappi-demo.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rappi-demo-kafka-web-producer
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: sockets
                port:
                  number: 1338
